made gravity for moving blocks

--- a/tetris.html
+++ b/tetris.html
@@ -11,6 +11,7 @@
 <body>
     <canvas id="tetris" width="500" height="700" style="margin: auto;"></canvas>
     <script src="tetris.js"></script>
+    <button onclick="sendTile()">Send Tile</button>
 </body>
 
 </html>
